# IntelliVid

./: .gitignore  LICENSE  README.md  pyproject.toml  ui.py
core/: main.py  utils.py
