[project]
name = "vidintel"
version = "0.1.0"
description = "AI-powered Video Intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.5.0",
    "pytubefix>=8.12.2",
    "streamlit>=1.43.2",
]

[tool.uv.sources]
google-genai = { git = "https://github.com/googleapis/python-genai.git" }
